Fix date and time column alignment.

--- a/src/main/resources/dk/itu/bookie/stylesheet/Main.css
+++ b/src/main/resources/dk/itu/bookie/stylesheet/Main.css
@@ -1,3 +1,11 @@
+#dateColumn.table-cell {
+  -fx-alignment: CENTER-RIGHT;
+}
+
+#timeColumn.table-cell {
+  -fx-alignment: CENTER-LEFT;
+}
+
 .padded {
   -fx-padding: 6px;
 }
